; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/gatt/extr_gatt_main.c_gatt_l2cif_data_ind_cback.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/gatt/extr_gatt_main.c_gatt_l2cif_data_ind_cback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GATT_CH_OPEN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @gatt_l2cif_data_ind_cback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gatt_l2cif_data_ind_cback(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call i32* @gatt_find_tcb_by_cid(i32 %6)
  store i32* %7, i32** %5, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %18

9:                                                ; preds = %2
  %10 = load i32*, i32** %5, align 8
  %11 = call i64 @gatt_get_ch_state(i32* %10)
  %12 = load i64, i64* @GATT_CH_OPEN, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %18

14:                                               ; preds = %9
  %15 = load i32*, i32** %5, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @gatt_data_process(i32* %15, i32* %16)
  br label %21

18:                                               ; preds = %9, %2
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @osi_free(i32* %19)
  br label %21

21:                                               ; preds = %18, %14
  ret void
}

declare dso_local i32* @gatt_find_tcb_by_cid(i32) #1

declare dso_local i64 @gatt_get_ch_state(i32*) #1

declare dso_local i32 @gatt_data_process(i32*, i32*) #1

declare dso_local i32 @osi_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
